<resources>
    <string name="app_name">CloudApp</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_assignment">任务</string>
    <string name="title_video">直播</string>
    <string name="title_find">发现</string>
    <string name="title_my">我的</string>
</resources>
