<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/ic_video_library_black_24dp"
        android:title="@string/title_video" />
    <item
        android:id="@+id/navigation_assignment"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_assignment" />
    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/ic_near_find_black_24dp"
        android:title="@string/title_find" />
    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_my" />


</menu>
